5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1845_2221.log
== TEST (2019-06-26 06:12:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_notas=array(eval(input("notas: ")))
linha=shape(m_notas)[0]
zeros=zeros(linha, dtype=float)
for i in range(linha):
	zeros[i]=min(m_notas[i,:])
print(zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 06:14:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_notas=array(eval(input("notas: ")))
linha=shape(m_notas)[0]
zeros=zeros(linha, dtype=float)

for i in range(linha):
	zeros[i]=min(m_notas[i,:])
print(sum(zeros))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 06:16:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_notas=array(eval(input("notas: ")))
linha=shape(m_notas)[0]
zeros=zeros(linha, dtype=float)

for i in range(linha):
	zeros[i]=min(m_notas[i,:])
print(sum(zeros)/linha)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 06:18:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_notas=array(eval(input("notas: ")))
linha=shape(m_notas)[0]
zeros=zeros(linha, dtype=float)

for i in range(linha):
	zeros[i]=min(m_notas[i,:])
print(roubd(sum(zeros)/linha, 2)

-- ERROR:
File "XXXX", line 10
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 06:18:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_notas=array(eval(input("notas: ")))
linha=shape(m_notas)[0]
zeros=zeros(linha, dtype=float)

for i in range(linha):
	zeros[i]=min(m_notas[i,:])
print(round(sum(zeros)/linha, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 06:19:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_notas=array(eval(input("notas: ")))
linha=shape(m_notas)[0]
zeros=zeros(linha, dtype=float)

for i in range(linha):
	zeros[i]=min(m_notas[i,:])
print(round(sum(zeros)/linha, 2))

-- EXECUTION TIME:
1.05536
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
